# Anfora

./: .gitignore  CMakeLists.txt  README.md
lib/anforaloader/include/: anforaapi.hpp
lib/anforaloader/include/anfora/: api.hpp
src/example-mod/: mod.cpp
src/launcher/: main.cpp
src/loader/: anforaapi.cpp  api.cpp  hook.hpp  loader.cpp  loader.hpp  mod.cpp  mod.hpp
